hphp/test/slow/type_annotation/type_annotation3.php.expectf
Fatal error: Non-existent class C in %s on line 4
